# mise-en-place

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF.md  README.md  app.py  main.py  pyproject.toml  render.yaml
backend/: database.py  main.py
backend/routers/: calendar.py  coach.py  diagnostics.py  grocery.py  meals.py  pantry.py  planning.py  profile.py  weight_log.py
backend/schemas/: calendar.py  coach.py  pantry.py  planning.py  profile.py  weight_log.py
backend/services/: coach_service.py  food_units.py  grocery_service.py  pantry_service.py  planning_service.py  tdee_service.py
data/: knowledge.db  recipes.db
data/kb_sources/: issn-beta-alanine-2015.md  issn-caffeine-2021.md  issn-creatine-2017.md  issn-diets-body-composition-2017.md  issn-meal-frequency-2011.md  issn-nutrient-timing-2017.md  issn-protein-2017.md
eval/: RESULTS.md  gold.py  rag_eval.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
meal_planner/: graph.py  llm.py  state.py  tracing.py
meal_planner/agents/: meal_planner.py  nutrition.py  orchestrator.py  pantry_parser.py  shopping_list.py
scripts/: ingest_kb.py  ingest_recipes.py
tests/: conftest.py  test_coach_router.py  test_coach_service.py  test_grocery_service.py  test_meal_planner_node.py  test_meal_variety.py  test_nutrition_node.py  test_pantry_server.py  test_pantry_service.py  test_rag_chunking.py  test_rag_eval.py  test_rag_guidance.py  test_rag_recipes.py  test_rag_retriever.py  test_routers.py  test_tdee_service.py
(+67 files in other folders)
