[project]
name = "mise-en-place"
version = "0.1.0"
description = "Multi-agent AI meal planning system built with LangGraph and MCP"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langsmith>=0.1.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meal_planner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
